--- a/blog-next/package.json
+++ b/blog-next/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "deploy:static": "next build && next export"
+    "deploy:static": "next build && next export",
+    "postbuild": "next-on-netlify"
   },
   "dependencies": {
     "disqus-react": "^1.0.10",
     "next": "10.0.1",
+    "next-on-netlify": "^2.6.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "remark": "^13.0.0",
