--- a/blog-next/package.json
+++ b/blog-next/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "deploy:static": "next build && next export",
-    "postbuild": "next-on-netlify"
+    "postbuild": "next-on-netlify",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "disqus-react": "^1.0.10",
@@ -20,6 +22,10 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.12.1",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.1",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
     "@types/styled-components": "^5.1.4",
@@ -31,6 +37,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
+    "jest-styled-components": "^7.0.3",
     "prettier": "^2.1.2",
     "typescript": "^4.0.5"
   }
