--- a/blog-next/package.json
+++ b/blog-next/package.json
@@ -9,7 +9,9 @@
     "deploy:static": "next build && next export",
     "postbuild": "next-on-netlify",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "storybook": "start-storybook -s ./public -p 6006 --no-dll",
+    "build-storybook": "build-storybook --no-dll"
   },
   "dependencies": {
     "disqus-react": "^1.0.10",
@@ -22,7 +24,12 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
     "@babel/preset-typescript": "^7.12.1",
+    "@storybook/addon-actions": "^6.0.28",
+    "@storybook/addon-essentials": "^6.0.28",
+    "@storybook/addon-links": "^6.0.28",
+    "@storybook/react": "^6.0.28",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@types/jest": "^26.0.15",
@@ -31,6 +38,7 @@
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
+    "babel-loader": "^8.2.1",
     "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
@@ -40,6 +48,7 @@
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.3",
     "prettier": "^2.1.2",
+    "react-is": "^17.0.1",
     "typescript": "^4.0.5"
   }
 }
